force-app/main/default/objects/Proposal__c/Proposal__c.object-meta.xml
<CustomObject>
    <label>Proposal</label>
    <nameField>
        <displayFormat>P-{00000000}</displayFormat>
        <label>Proposal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>