force-app/main/default/objects/Proposal__c/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <label>Billing Address</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Proposals (Billing Address)</relationshipLabel>
    <relationshipName>Billing_Address_Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>