force-app/main/default/objects/Proposal__c/fields/Billing_Group_Key__c.field-meta.xml
<CustomField>
    <fullName>Billing_Group_Key__c</fullName>
    <description>Correlates related deposit/progress/final invoices.</description>
    <label>Billing Group Key</label>
    <length>36</length>
    <type>Text</type>
</CustomField>