force-app/main/default/objects/Proposal__c/fields/Billing_Model__c.field-meta.xml
<CustomField>
    <fullName>Billing_Model__c</fullName>
    <label>Billing Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Progress</fullName>
                <label>Milestone</label>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Useage-Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>