force-app/main/default/objects/Proposal__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <description>File name for generated file.</description>
    <formula>Name + &quot;-&quot; + Proposal_Title__c</formula>
    <label>File Name</label>
    <type>Text</type>
</CustomField>