force-app/main/default/objects/Proposal__c/fields/Fulfillment_Route__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Route__c</fullName>
    <label>Fulfillment Route</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Proposal_Fulfillment_Route</valueSetName>
    </valueSet>
</CustomField>