force-app/main/default/objects/Proposal__c/fields/Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin__c</fullName>
    <formula>IF(
  (Total_Price__c - BLANKVALUE(Discount_Amount__c,0)) &gt; 0,
  (
    (Total_Price__c - BLANKVALUE(Discount_Amount__c,0)) - BLANKVALUE(Total_Cost__c,0)
  ) / (Total_Price__c - BLANKVALUE(Discount_Amount__c,0)),
  0
)</formula>
    <label>Gross Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>