force-app/main/default/objects/Proposal__c/fields/Gross_Profit__c.field-meta.xml
<CustomField>
  <fullName>Gross_Profit__c</fullName>
  <label>Gross Profit</label>
  <type>Currency</type>
  <precision>16</precision>
  <scale>2</scale>
  <formula>
( Total_Price__c - BLANKVALUE(Discount_Amount__c,0) ) - BLANKVALUE(Total_Cost__c,0)
  </formula>
</CustomField>