force-app/main/default/objects/Proposal__c/fields/Is_Binding__c.field-meta.xml
<CustomField>
    <fullName>Is_Binding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Binding</label>
    <type>Checkbox</type>
</CustomField>