force-app/main/default/objects/Proposal__c/fields/Original_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Original_Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Proposals (Change Order Proposals)</relationshipLabel>
    <relationshipName>Proposal_Change_Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>