force-app/main/default/objects/Proposal__c/fields/Pricebook2__c.field-meta.xml
<CustomField>
    <fullName>Pricebook2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Price_Book_Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>