force-app/main/default/objects/Proposal__c/fields/Proposal_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Date__c</fullName>
    <label>Proposal Date</label>
    <type>Date</type>
</CustomField>