force-app/main/default/objects/Proposal__c/fields/Proposal_Type__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Type__c</fullName>
    <label>Proposal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value><fullName>Estimate</fullName><default>true</default><label>Estimate</label></value>
            <value><fullName>Quote</fullName><default>false</default><label>Quote</label></value>
            <value><fullName>Change</fullName><default>false</default><label>Change</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>