force-app/main/default/objects/Proposal__c/fields/Service_Address__c.field-meta.xml
<CustomField>
    <fullName>Service_Address__c</fullName>
    <label>Service Address</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Proposals (Service Address)</relationshipLabel>
    <relationshipName>Service_Address_Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>