force-app/main/default/objects/Proposal__c/fields/Service_Relationship__c.field-meta.xml
<CustomField>
  <fullName>Service_Relationship__c</fullName>
  <label>Service Relationship</label>
  <type>Lookup</type>
  <referenceTo>Service_Relationship__c</referenceTo>
  <relationshipLabel>Proposals</relationshipLabel>
  <relationshipName>Service_Relationship_Proposals</relationshipName>
  <deleteConstraint>SetNull</deleteConstraint>
</CustomField>