force-app/main/default/objects/Proposal__c/fields/Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount__c</fullName>
    <formula>ROUND(Taxable_Subtotal__c * BLANKVALUE(Tax_Rate__c, 0), 2)</formula>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>