force-app/main/default/objects/Proposal__c/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    <label>Tax Rate (%)</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>