force-app/main/default/objects/Proposal__c/fields/Taxable_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Subtotal__c</fullName>
    <label>Taxable Subtotal</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>