force-app/main/default/objects/Proposal__c/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <label>Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Due on Receipt</fullName>
                <default>true</default>
                <label>Due on Receipt</label>
            </value>            
            <value>
                <fullName>Net 7</fullName>
            </value>
            <value>
                <fullName>Net 15</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 45</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>            
        </valueSetDefinition>
    </valueSet>
</CustomField>