force-app/main/default/objects/Proposal__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
  <fullName>Total_Amount__c</fullName>
  <label>Total Amount</label>
  <type>Currency</type>
  <precision>16</precision>
  <scale>2</scale>
  <formulaTreatBlankAs>BlankAsZero</formulaTreatBlankAs>
  <formula>
ROUND(Total_Price__c - BLANKVALUE(Discount_Amount__c,0) + BLANKVALUE(Tax_Amount__c,0), 2)
  </formula>
</CustomField>