force-app/main/default/objects/Proposal__c/fields/Total_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Total_Discounts__c</fullName>
    <formula>MAX(Subtotal__c - Total_Price__c, 0) + BLANKVALUE(Discount_Amount__c, 0)</formula>
    <label>Total Discounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>